trunk/Archive2/b2/fce3a4851802a8/output
main.cpp: In function 'int main()':
main.cpp:12:24: error: 'input' was not declared in this scope
             solution = input[j][i + 1];
                        ^
main.cpp:35:13: error: 'input' was not declared in this scope
         if (input[i][0] < solution) {
             ^
